testsuite/tests/indexed-types/should_fail/OverA.hs
{-# LANGUAGE TypeFamilies #-}

module OverA (C, D)
where

data family C a b :: *

type family D a b :: *